# fosse

./: .gitignore  Makefile  README.md  build-static.sh  config.example.json  dev-static.sh  docker-compose.yml
backend/: Cargo.toml  email_template.html  sample_import.csv
backend/fixtures/: sample_import.csv  test_config.json
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_sessions.rs  m20240101_000002_create_people.rs  m20240101_000003_create_questionnaires.rs  m20240101_000004_create_email_jobs.rs  m20240101_000005_create_import_jobs.rs  m20240101_000006_add_email_content.rs  m20240101_000007_make_end_date_optional.rs  m20240101_000008_add_wants_regulator.rs  m20240101_000009_add_comes_from_issoire.rs  m20240101_000010_add_user_preferences.rs  m20240101_000011_remove_session_specific_prefs.rs  m20240101_000012_recreate_people_clean.rs  m20240101_000013_ensure_people_structure.rs  m20240101_000014_add_unique_constraints.rs  m20240101_000015_add_session_summary_token.rs  m20240101_000016_add_diving_level.rs  m20240101_000017_create_competencies.rs  m20240101_000018_create_groups_acl.rs  m20240101_000019_create_competency_hierarchy.rs  m20240101_000020_add_password_auth.rs  m20240101_000021_create_level_documents.rs  m20240101_000022_add_skill_description.rs  m20240101_000023_add_nitrox_training.rs  m20240101_000024_add_optimization_mode.rs  m20240101_000025_create_palanquees.rs  m20240101_000026_add_directeur_plongee.rs  m20240101_000027_create_sorties.rs  (+4 more)
backend/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs
(+113 files in other folders)
